swiper-slide 에 all unset 적용

--- a/src/components/Slider/NewsSlider.scss
+++ b/src/components/Slider/NewsSlider.scss
@@ -29,6 +29,7 @@
         height: 580px !important;
     }
     .news_section .swiper-backface-hidden .swiper-slide {
+        all: unset;
         width: auto !important;
     }
     .news_section .swiper-pagination-fraction,
