--- a/src/components/Home/_Home.scss
+++ b/src/components/Home/_Home.scss
@@ -14,6 +14,9 @@ main {
             z-index: 2;
 
             .text_box {
+                position: relative;
+                z-index: 2;
+
                 .caption {
                     color: $white;
                 }
@@ -162,8 +165,10 @@ main {
 
         .container {
             .text_box {
+                position: relative;
                 display: flex;
                 flex-direction: column;
+                z-index: 2;
 
                 .title {
                     margin-top: 0;
