--- a/src/components/Home/_Home.scss
+++ b/src/components/Home/_Home.scss
@@ -58,6 +58,7 @@ main {
         padding-bottom: 100px;
         background: #f5f5f5;
         transform: translateY(10px);
+
         .bg_photo {
             width: 91.111%;
             padding-bottom: 61%;
@@ -65,6 +66,9 @@ main {
                 center/cover;
             margin-bottom: 40px;
             transform: translateY(-10px);
+        }
+        .bg_photo.aos-animate {
+            transform: translateY(-10px) translateZ(0);
         }
         .text_box {
             width: 82.222%;
@@ -354,6 +358,9 @@ main {
                 margin-bottom: 2px;
                 transform: translateY(-48px);
             }
+            .bg_photo.aos-animate {
+                transform: translateY(-48px) translateZ(0);
+            }
             .text_box {
                 width: 74.218%;
                 margin: 0;
@@ -565,6 +572,9 @@ main {
                 padding-bottom: 531px;
                 margin-bottom: -20px;
                 transform: translateY(-70px);
+            }
+            .bg_photo.aos-animate {
+                transform: translateY(-70px) translateZ(0);
             }
             .text_box {
                 width: 55.664%;
@@ -781,6 +791,9 @@ main {
                 margin-left: 0;
                 margin-bottom: 0;
                 transform: translateY(0);
+            }
+            .bg_photo.aos-animate {
+                transform: translateY(0) translateZ(0);
             }
             .text_box {
                 width: 570px;
