--- a/src/components/Header/_Header.scss
+++ b/src/components/Header/_Header.scss
@@ -69,7 +69,7 @@ header {
                 color: $white;
 
                 li {
-                    border-bottom: 1px solid $white;
+                    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
                     cursor: pointer;
 
                     a {
@@ -88,6 +88,7 @@ header {
             }
             &.active {
                 left: 0;
+                border-top: 1px solid rgba(255, 255, 255, 0.3);
             }
         }
     }
