Home.tsx components 디렉토리에서 pages 디렉토리로 이동

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,6 +3,6 @@
 @import "mixins";
 @import "common";
 
-@import "../components/Home/_Home.scss";
+@import "../pages/Home/_Home.scss";
 @import "../components/Header/_Header.scss";
 @import "../components/Footer/_Footer.scss";
